# hello-opengl

./: CMakeLists.txt  main.cpp
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/miniaudio/: CMakeLists.txt
ext/stb_image/: CMakeLists.txt
glsl/: fragment.glsl  vertex.glsl  vertex_kopi.glsl  vertex_map.glsl
